# ClearScriptForUnity3d

./: ClearScript.Unity3D.sln
.github/workflows/: build_clearscript_android.yml  build_clearscript_apple.yml  build_clearscript_windows.yml  build_v8_android.yml  build_v8_apple.yml  build_v8_windows.yml
ClearScript.V8.Native/: CMakeLists.txt
ClearScript.V8.Native/scripts/: make_clearscript_android.sh  make_clearscript_apple.sh  make_clearscript_windows.cmd  make_clearscript_xcode.sh
ClearScript.V8.Native/src/: CMakeLists.txt
ClearScript/V8/: V8Proxy.NetFramework.cs  V8Proxy.cs
ClearScript/V8/SplitProxy/: V8EntityHolder.cs
ClearScriptV8/: CommonPlatform.h
NetFramework/ClearScript.V8/: ClearScript.V8.csproj
V8/: build_v8_android.sh  build_v8_apple.sh  build_v8_windows.cmd
